# dp-cli

./: .gitignore  README.md  pyproject.toml
dp_cli/: bridge.py  bridge_manager.py  main.py  output.py  session.py  snapshot.py  stealth.py
dp_cli/commands/: __init__.py  _utils.py  browser.py  element.py  keyboard.py  misc.py  network.py  page.py  snapshot_cmd.py  storage.py  tab.py
dp_cli/locators/: __init__.py  playwright.py  pw_js.py
dp_cli/snapshot/: __init__.py  a11y.py  clickable.py  clickable_js.py  core.py  extract.py  js_scripts.py  render.py  utils.py
skills/: SKILL.md
skills/dp-cli/: SKILL.md
skills/dp-cli/references/: commands.md
skills/references/: commands.md  extraction.md
tests/: test_bridge_integration.py  test_bridge_manager.py  test_clickable.py  test_pw_locator.py  test_resolve_locator.py
